transaction model and controller
