# src/controllers/transaction.js
@@ -1,17 +1,66 @@
+const Transaction = require("../models/transaction");
+
 async function getAll(req, res) {
-  return res.sendStatus(200);
+  try {
+    const result = await Transaction.find().populate("category");
+    return res.status(200).json(result);
+  } catch (error) {
+    console.log(error);
+    return res.status(500);
+  }
 }
+
 async function getOne(req, res) {
-  return res.sendStatus(200);
+  try {
+    const result = await Transaction.findById(req.params.id).populate(
+      "category",
+    );
+    return res.status(200).json(result);
+  } catch (error) {
+    console.log(error);
+    return res.status(500);
+  }
 }
+
 async function create(req, res) {
-  return res.sendStatus(200);
+  const { type, description, amount, date, category } = req.body;
+  try {
+    const result = await Transaction.create({
+      type,
+      description,
+      amount,
+      date,
+      category,
+    });
+    return res.status(201).json(result);
+  } catch (error) {
+    console.log(error);
+    return res.status(500);
+  }
 }
+
 async function update(req, res) {
-  return res.sendStatus(200);
+  const { type, description, amount, date, category } = req.body;
+  try {
+    const result = await Transaction.updateOne(
+      { _id: req.params.id },
+      { type, description, amount, date, category },
+    );
+    return res.status(200).json(result);
+  } catch (error) {
+    console.log(error);
+    return res.status(500);
+  }
 }
+
 async function remove(req, res) {
-  return res.sendStatus(200);
+  try {
+    const result = await Transaction.deleteOne({ _id: req.params.id });
+    return res.status(200).json(result);
+  } catch (error) {
+    console.log(error);
+    return res.status(500);
+  }
 }
 
 module.exports = { getAll, getOne, create, update, remove };
